add and to ayoung bio

--- a/Public/bio-ayoung.html
+++ b/Public/bio-ayoung.html
@@ -66,7 +66,7 @@
       <p>Alex worked in the federal and provincial governments for over a decade including negotiating for Canada at the United Nations General Assembly in New York and directly advising the Deputy Premier of Ontario on health and long-term care policy.  After leaving government, Alex joined the private sector, practicing corporate law at Canada’s leading First Nations Law firm, Olthuis, Kleer, Townshend LLP. </p>
       <p>Alex is Co-Founder and a pro-bono teacher in residence at the Buddhavipassana Meditation Centre in Toronto. His work in developing meditation centres and teaching insight meditation was recognized in 2014 by the Governor of Chiangmai Province, Thailand by presentation of the Benefactor of Buddhism Award. </p>
       <p>Alex earned an insight meditation teaching certificate from Chomtong Temple and Meditation Centre in Northern Thailand, training under the late Ven. Ajahn Tong Sirimangalo, Thanat Chindaporn and Kathryn Johnston Chindaporn. He holds a Masters of Public Administration from the University of Victoria, a Global Professional Master of Laws from the University of To ronto and is a member in good standing of the Law Society of Ontario (LSO #74016R). </p>
-      <p>Professional and Academic Designations: BSc. H., MPA, LL.B., GPLLM, Insight Meditation Teacher</p>
+      <p>Professional and Academic Designations: BSc. H., MPA, LL.B., GPLLM and Insight Meditation Teacher</p>
     </figure>
   </section>
   
